fixing cr issues: Post/products return inserted product, adding get products schema
